Fri Oct 11 03:36:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_threadptr_execute_interrupts): flush postponed job only
	  once at last.

	* vm_trace.c (rb_postponed_job_flush): defer calling postponed jobs
	  registered while flushing to get rid of infinite reentrance of
	  ObjectSpace.after_gc_start_hook.  [ruby-dev:47400] [Bug #8492]

Thu Oct 10 23:04:00 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_or): remove unused variables.

Thu Oct 10 23:01:16 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_or): use rb_hash_keys().

Thu Oct 10 21:36:16 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_compact_bang): use ary_resize_smaller().

Thu Oct 10 17:25:28 2013  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_exec): support :b_return event for "lambda{return}.call".
	  [Bug #8622]

	* test/ruby/test_settracefunc.rb: add a test.

Thu Oct 10 13:52:37 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c (postponed_job): use preallocated buffer.
	  Pre-allocate MAX_POSTPONED_JOB (1024) sized buffer
	  and use it.
	  If rb_postponed_job_register() cause overflow, simply it
	  fails and returns 0.
	  And maybe rb_postponed_job_register() is signal safe.

	* vm_core.h: change data structure.

Thu Oct 10 11:11:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (Init_VM): hide also the singleton class of frozen-core, not
	  only frozen-core itself.

Thu Oct 10 06:02:08 2013  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_rand.rb: fix r43224. local variable `e' is
	  no longer available.

Thu Oct 10 00:02:35 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* numeric.c (fix_aref): avoid a possible undefined behavior.
	  1L << 63 on 64-bit platform is undefined, at least, according to
	  ISO/IEC 9899 (C99) 6.5.7.

Wed Oct  9 23:57:02 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (id_for_attr): avoid inadvertent symbol creation.

Wed Oct  9 18:03:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
